# Clang-Identifiers-To-Retrieve-The-Mangled-Name

./: -o  CMakeLists.txt  LICENSE  ManglePass.cpp  README.md
CD/: assembly.diff  ir.diff  mangled-assembly.asm  mangled-exe  mangled-test.ll  normal-exe  test.c
cd_El/: mangled-assembly.asm  mangled-exe  mangled-test.ll  test.ll
example/: README.md  mangled-assembly.asm  mangled-exe  mangled-test.ll  normal-assembly.asm
